updated readme and some code

--- a/site2/home.html
+++ b/site2/home.html
@@ -8,13 +8,12 @@
             var socket = io.connect('http://' + document.domain + ':' + location.port);
             socket.on('connect', function() {
                 socket.emit('success', {data: 'I\'m connected!'});
-                console.log("connected");
             });
-            socket.on("update", function(msg) {
-                console.log("received update"); // XXX: change line below to not have a port
-                document.getElementById("iframe").src = 'http://' + document.domain + ':' + location.port + msg.data;
-                console.log(msg.data);
-            });
+            socket.on('update', function(data) {
+                console.log(data.data)
+                // XXX: change line below to not have a port
+                document.getElementById("iframe").src = 'http://' + document.domain + ':8082' + data.data;
+            })
         </script>
     </head>
     <body>
