changed iframe to img

--- a/site2/home.html
+++ b/site2/home.html
@@ -18,8 +18,6 @@
     </head>
     <body>
         <h1>View Your Uploaded File</h1>
-        <iframe id="iframe" width="100%" src="/">
-            iframe failed. IDK
-        </iframe>
+        <img id="iframe" width="100%" src="/">
     </body>
 </html>
