--- a/site2/home.html
+++ b/site2/home.html
@@ -7,17 +7,19 @@
         <script>
             var socket = io.connect('http://' + document.domain + ':' + location.port);
             socket.on('connect', function() {
+                console.log("Connected")
                 socket.emit('success', {data: 'I\'m connected!'});
             });
             socket.on('update', function(data) {
+                console.log("Received update")
                 console.log(data.data)
                 // XXX: change line below to not have a port
-                document.getElementById("iframe").src = 'http://' + document.domain + ':8082' + data.data;
+                document.getElementById("image").src = 'http://' + document.domain + ':8082' + data.data;
             })
         </script>
     </head>
     <body>
         <h1>View Your Uploaded File</h1>
-        <img id="iframe" width="100%" src="/">
+        <img id="image" width="100%" src="/">
     </body>
 </html>
