--- a/site2/home.html
+++ b/site2/home.html
@@ -7,15 +7,16 @@
         <script>
             var socket = io.connect('http://' + document.domain + ':' + location.port);
             socket.on('connect', function() {
-                console.log("Connected")
+                console.log("Connected");
                 socket.emit('success', {data: 'I\'m connected!'});
+
+                socket.on('update', function(data) {
+                    console.log("Received update");
+                    console.log(data.data);
+                    // XXX: change line below to not have a port
+                    document.getElementById("image").src = 'http://' + document.domain + ':8082' + data.data;
+                });
             });
-            socket.on('update', function(data) {
-                console.log("Received update")
-                console.log(data.data)
-                // XXX: change line below to not have a port
-                document.getElementById("image").src = 'http://' + document.domain + ':8082' + data.data;
-            })
         </script>
     </head>
     <body>
