--- a/site2/home.html
+++ b/site2/home.html
@@ -7,16 +7,18 @@
         <script>
             var socket = io.connect('http://' + document.domain + ':' + location.port);
             socket.on('connect', function() {
-                console.log("Connected");
-                socket.emit('success', {data: 'I\'m connected!'});
-
-                socket.on('update', function(data) {
-                    console.log("Received update");
-                    console.log(data.data);
-                    // XXX: change line below to not have a port
-                    document.getElementById("image").src = 'http://' + document.domain + ':8082' + data.data;
-                });
+                console.log("Connected")
             });
+            setInterval(function() {
+                // Poll the server every two seconds
+                console.log("About to update")
+                socket.emit("update", function(data) {
+                    // callback
+                    // XXX: change line below to not have a port
+                    document.getElementById("image").src = 'http://' + document.domain + ':8082' + data;
+                    console.log("Updated")
+                })
+            }, 2000)
         </script>
     </head>
     <body>
