Added file type and size warnings

--- a/site1/home.html
+++ b/site1/home.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Upload a file to IPFS</h1>
+        <h3>The file should be an image, and smaller than 16 MB. It will be rejected otherwise.</h3>
         <form method="post" enctype="multipart/form-data">
             <input type="file" name="file">
             <input type="submit" value="Upload">
