added image and made image link local

--- a/site1/home.html
+++ b/site1/home.html
@@ -11,7 +11,7 @@
             <input type="file" name="file">
             <input type="submit" value="Upload">
         </form>
-        <img src="https://s15-us2.startpage.com/wikioimage/181265735793a1a12451bf15dfc6e263.png" height="100" width="100" />
+        <img src="ipfs.png" height="100" width="100" />
         <footer>
             <a href="https://tomesh.net">tomesh.net</a>
             <br /><br /> <b>This is Site 1, <a href="http://1.tomesh/demo">
